@@ -36,3 +36,15 @@
 #define RTLD_SINGLE_THREAD_P \
   __builtin_expect (THREAD_GETMEM (THREAD_SELF, \
 				   header.multiple_threads) == 0, 1)
+
+/* Different that other architectures, SPARC pass a sigcontext_t struct
+   in third argument for signal handler with SA_SIGINFO.  */
+static inline
+uintptr_t __pthread_get_pc (const struct sigcontext *sigctx)
+{
+#if __WORDSIZE == 64
+  return sigctx->sigc_regs.tpc;
+#else
+  return sigctx->si_regs.pc;
+#endif
+}
